--- a/CSS/report.css
+++ b/CSS/report.css
@@ -1,19 +1,23 @@
-
-.container{
-	/*text-align:center;*/
-	height:500px;
-
+.container {
+  /*text-align:center;*/
+  height: 500px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
-.col-md-3{
-	text-align:left;
+.col-md-3 {
+  text-align: left;
 }
 .col-md-12 {
-	width:100%;
-	height:300px;
-	border:1px solid lightgray;
-	margin:20px 0;
+  width: 100%;
+  height: 300px;
+  border: 1px solid lightgray;
+  margin: 20px 0;
 }
-body{
-	/*font-size:30px;*/
-	background-color:floralwhite;
+body {
+  /*font-size:30px;*/
+  background-color: floralwhite;
 }
