--- a/CSS/report.css
+++ b/CSS/report.css
@@ -1,15 +1,15 @@
-.row{
-  margin-bottom:20px;
+.row {
+  margin-bottom: 20px;
 }
 body {
   /*font-size:30px;*/
   background-color: floralwhite;
 }
-.btn-secondary{
-  margin-bottom:10px;
+.btn-secondary {
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
 .container {
-  height: 500px;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -26,10 +26,10 @@ body {
   border: 1px solid lightgray;
   border-radius: 10px;
 }
-label{
-  font-size: 20px;  
+label {
+  font-size: 20px;
 }
-#location{
-  height:40px;
-  border-radius:5px;
+#location {
+  height: 40px;
+  border-radius: 5px;
 }
