--- a/CSS/style.css
+++ b/CSS/style.css
@@ -103,7 +103,7 @@ body {
 table{
   display:table;
   border-color: gray;
-  border-spacing: 100px;
+  border-spacing: 3cm 1em;
   border-collapse: collapse;
 }
 
@@ -112,5 +112,5 @@ table, th, td {
 }
 
 td{
-  width: 120px;
+  width: 180px;
 }
