--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,19 @@ body {
   background-color: antiquewhite;
 }
 
+.headerTitle {
+  background-color: #730d0d;
+  color: white;
+  border-style: dotted;
+  padding-left: 16px;
+  font-family: candara, verdana, arial;
+  font-style: italic;
+}
+
+.headerMotto {
+  padding-left: 16px;
+}
+
 .navbarList {
   list-style-type: none;
   margin: 0;
@@ -10,6 +23,17 @@ body {
 
 .navbarListItem {
   display: inline;
+  padding-left: 2%;
+
+}
+
+.loginListItem {
+  position: relative;
+  margin: auto;
+  max-width: 200px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 80%;
 }
 
 .prev,
@@ -23,7 +47,7 @@ body {
   color: white;
   font-weight: bold;
   font-size: 18px;
-  transition: 0.6s ease;
+  transition: 0.6s ease
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
@@ -98,4 +122,29 @@ body {
   to {
     opacity: 1;
   }
+}
+
+.navButtons {
+  position: relative;
+  background-color: wheat;
+  border-style: solid;
+  margin-top: 32px;
+
+}
+
+.reportButton {
+  max-width: 210px;
+  position: relative;
+  margin: auto;
+  padding-top: 16px;
+  padding-left: 72px;
+}
+
+.viewButton {
+  max-width: 350px;
+  position: relative;
+  margin: auto;
+  padding-top: 16px;
+  padding-left: 76px;
+  padding-bottom: 16px;
 }
