--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,16 +1,15 @@
 body {
-  width:100%;
+  width: 100%;
   background-color: floralwhite;
   font-family: candara, verdana, arial;
 }
 
 .headerTitle {
   background-color: #189fb1;
-  width:100%;
+  width: 100%;
   color: white;
   padding-left: 16px;
   font-family: candara, verdana, arial;
-
 }
 
 .headerMotto {
@@ -35,21 +34,21 @@ body {
   margin: 0;
   padding: 0;
 }
-a.navbar-brand{
-  font-size:3em;
-  color:white;
-  margin-left:-1.5%;
-  margin-right:3%;
+a.navbar-brand {
+  font-size: 3em;
+  color: white;
+  margin-left: -1.5%;
+  margin-right: 3%;
 }
 .nav-item {
   margin-right: 15%;
-  font-size:1.5em;
+  font-size: 1.5em;
 }
-.nav-item a{
-  color:white;
+.nav-item a {
+  color: white;
 }
-a:hover{
-  color:gray;
+a:hover {
+  color: gray;
 }
 
 .prev,
@@ -63,7 +62,7 @@ a:hover{
   color: white;
   font-weight: bold;
   font-size: 18px;
-  transition: 0.6s ease
+  transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
@@ -104,7 +103,7 @@ a:hover{
   background-color: gray;
 }
 
-.fade {
+.fadeOurs {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
@@ -134,7 +133,6 @@ a:hover{
   background-color: wheat;
   border-style: solid;
   margin-top: 32px;
-
 }
 
 .reportButton {
